# spinat-studentup

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  STATUSLOG.md
.claude/: settings.local.json
archive/: README.md
archive/pump-game/: AGENTS.md
archive/pump-game/backend/: .env.example  config.yaml  main.py  run.sh
archive/pump-game/frontend/: package-lock.json  package.json  vite.config.ts
booth-2-objects/: AGENTS.md  PRD.md  README.md
booth-2-objects/backend/: config.yaml  pyproject.toml  run.sh
booth-2-objects/backend/services/: storage.py
booth-2-objects/backend/tests/: test_api.py
booth-2-objects/frontend/: index.html  package-lock.json  package.json  vite.config.ts
booth-3-record/: README.md
booth-3-record/backend/: config.yaml  pyproject.toml
booth-3-record/backend/routers/: session.py  videos.py
booth-3-record/backend/services/: r2.py
booth-3-record/backend/tests/: test_api.py
booth-3-record/frontend/: package.json
program-a-reels-booth/: AGENTS.md  PRD.md  README.md
program-a-reels-booth/backend/: config.py  config.yaml  main.py  pyproject.toml  requirements.txt  run.sh
program-a-reels-booth/backend/services/: qr_gen.py  r2.py
program-a-reels-booth/backend/tests/: test_api.py
program-a-reels-booth/frontend/: package.json
program-b-pump-game/: PRD.md  README.md
program-b-pump-game/backend/: config.py  pyproject.toml  requirements.txt  run.sh
program-b-pump-game/backend/routers/: game.py
program-b-pump-game/backend/services/: scoring.py
program-b-pump-game/backend/storage/charts/: chart_1.json
program-b-pump-game/frontend/: index.html
program-b-pump-game/frontend/src/: types.ts
recording-booth/: AGENTS.md
recording-booth/backend/: .env.example  config.py  main.py  pyproject.toml  run.sh
recording-booth/backend/routers/: session.py  videos.py  ws.py
recording-booth/backend/services/: r2.py  storage.py  transcode.py
recording-booth/backend/tests/: conftest.py  test_api.py  test_booth_identity.py
recording-booth/config/: booth-1.yaml  booth-2.yaml  booth-3.yaml  booth-4.yaml
recording-booth/frontend/: README.md  index.html  package-lock.json  tailwind.config.ts  vite.config.ts
recording-booth/frontend/src/: App.tsx  (+3 more)
scripts/: bootstrap.sh  migrate-storage.sh  start-all.sh  verify.sh
(+45 files in other folders)
