[project]
name = "spinat-booth-3-pump-game"
version = "0.1.0"
description = "spinat 펌프 Booth 3 — Pump Game (발판 게임) FastAPI backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv]
package = false
